# praecepta

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  methodology.md  praecepta-issues-2026-02-18.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: docs.yml  publish.yml  quality.yml  release.yml
.serena/: project.yml
_kb/: MANIFEST.md  SEARCH_INDEX.md
_kb/decisions/: _index.md
_kb/decisions/patterns/: PADR-101-vertical-slices.md  PADR-102-hexagonal-ports.md  PADR-103-error-handling.md  PADR-104-testing-strategy.md  PADR-105-observability.md  PADR-106-configuration.md  PADR-107-api-documentation.md  PADR-108-domain-service-protocols.md  PADR-109-sync-first-eventsourcing.md  PADR-110-application-lifecycle.md  PADR-111-classvar-aggregate-type-discrimination.md  PADR-112-module-level-registry.md  PADR-113-two-tier-validation.md  PADR-114-aggregate-lifecycle-state-machine.md  PADR-115-postgresql-rls-tenant-isolation.md  PADR-116-jwt-auth-jwks.md  PADR-118-jit-user-provisioning.md  PADR-119-separate-user-application.md  PADR-120-multi-auth-middleware-sequencing.md  PADR-121-projection-based-authentication.md  PADR-122-entry-point-auto-discovery.md
_kb/decisions/strategic/: PADR-001-event-sourcing.md  PADR-002-modular-monolith.md  PADR-004-security-trimming.md  PADR-005-task-queue.md
_kb/design/: BRIEF.md
_kb/design/references/: agent-skill-design-guidelines.md  con-development-constitution.md  proc-when-stuck-protocol.md  ref-project-execution-patterns.md  tiered-context-guideline.md  tiered-knowledge-architecture.md  workflow-evolution-spec.md
_kb/domains/api-framework/: BRIEF.md
_kb/domains/api-framework/references/: con-error-handling.md  proc-add-contribution.md  ref-app-factory.md  ref-error-handling.md  ref-request-context.md
_kb/domains/ddd-patterns/: BRIEF.md
_kb/domains/ddd-patterns/references/: con-domain-model.md  con-domain-modeling.md  con-layers.md  con-package-types.md  con-philosophy.md  ref-domain-aggregate-lifecycle.md  ref-domain-discriminated-unions.md  ref-domain-two-tier-validation.md  ref-package-structure.md  ref-patterns.md  ref-workspace-pep420-conventions.md
_kb/domains/deployment/: BRIEF.md
_kb/domains/deployment/references/: con-infrastructure.md  proc-deployment-procedure.md  ref-deployment-configs.md  ref-deployment.md
_kb/domains/event-store-cqrs/: BRIEF.md
_kb/domains/event-store-cqrs/references/: con-event-distribution.md  con-event-evolution.md  con-persistence-strategy.md  proc-event-flow.md  ref-domain-module-level-registry.md  ref-infra-delta-counter-projection.md  ref-infra-eventsourcing-transcoder.md
_kb/domains/infrastructure/: BRIEF.md
_kb/domains/infrastructure/references/: ref-settings-pattern.md  ref-tech-stack.md
_kb/domains/multi-tenancy/: BRIEF.md
_kb/domains/multi-tenancy/references/: con-request-context.md  ref-infra-rls-migration-helpers.md  ref-infra-slug-reservation.md  ref-infra-tenant-context-handler.md  ref-shared-interactions.md
_kb/domains/observability/: BRIEF.md
_kb/domains/observability/references/: con-observability.md  ref-api-composite-health-scoring.md
_kb/domains/security/: BRIEF.md
_kb/domains/security/references/: con-acl.md  con-security-context.md  con-security-model.md  ref-domain-principal.md  ref-infra-dev-bypass-safety.md  ref-infra-display-once-credential.md  ref-infra-jit-provisioning.md  ref-infra-jwks-provider.md  ref-infra-jwt-auth-middleware.md  ref-infra-multi-auth-middleware.md  (+2 more)
_kb/domains/test-strategy/: BRIEF.md
_workspace/code-intelligence/: architecture.md  backlog.md  code-intelligence-design-spec.md
_workspace/praecepta-audit/: MIGRATION-GUIDE.md  audit-requirements.md
_workspace/praecepta-audit/pass-1/: infra-auth.md  infra-fastapi.md  infra-observability.md  infra-persistence.md  infra-taskiq.md
_workspace/praecepta-audit/pass-2/: convention-compliance.md  lifecycle-coherence.md  resource-budget.md
_workspace/praecepta-audit/pass-3/: consolidated-findings.md
_workspace/praecepta-audit/pass-4/: remediation-backlog.md
_workspace/retrospective/: baseline-verify.txt  consolidated-report.md  remediation-backlog.md
_workspace/retrospective/audits/: 01-architecture-compliance.md  02-domain-model-quality.md  03-conventions-standards.md  04-test-quality.md  05-developer-experience.md  06-completeness-gaps.md
docs/: kb-package-design-plan.md  mkdocs.yml  praecepta-extraction-plan.md  progress.md
docs/.astro/: content-modules.mjs  content.d.ts  data-store.json
docs/docs/: decisions.md  index.md
docs/docs/architecture/: entry-points.md  namespace-packages.md  overview.md  packages.md
docs/docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/docs/guides/: add-api-endpoint.md  build-projection.md  create-domain-package.md  define-aggregate.md  define-events.md  multi-tenancy.md  production-configuration.md  testing.md
docs/docs/reference/: domain-identity.md  domain-tenancy.md  foundation-application.md  foundation-domain.md  infra-auth.md  infra-codeintel.md  infra-eventsourcing.md  infra-fastapi.md  infra-observability.md  infra-persistence.md
docs/docs/releases/: index.md  v0.3.0.md  v1.0.0.md
examples/dog_school/: __init__.py  app.py  domain.py  router.py
tests/: conftest.py  test_integration_app_factory.py  test_integration_dog_school.py  test_integration_error_handling.py  test_integration_middleware.py  test_smoke.py
tests/integration/: conftest.py  test_agent_api_key_repository_postgres.py  test_agent_app_postgres.py  test_config_repository_postgres.py  test_database_manager_live.py  test_event_store_postgres.py  test_full_stack.py  test_hybrid_config_cache_redis.py  test_oidc_sub_registry_postgres.py  test_pkce_store_redis.py  test_redis_factory_live.py  test_rls_enforcement.py  test_slug_registry_postgres.py  test_tenant_app_postgres.py  test_tenant_config_projection_e2e.py  test_tenant_list_projection_e2e.py  test_tenant_repository_postgres.py  test_user_app_postgres.py  test_user_profile_projection_e2e.py  test_user_profile_repository_postgres.py
(+5 files in other folders)
